<resources>
    <string name="app_name">Aura</string>
    <string name="wave_desc">Wave</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_acc">Create an account</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email">E-mail</string>
    <string name="username_email">Username/E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="or">OR</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="eco_gauge_label">eCO2</string>
    <string name="voc_gauge_label">VOC</string>
    <string name="hum_gauge_label">Humidity</string>
    <string name="pressure_gauge_label">BP</string>
    <string name="temp_gauge_label">Temp</string>
    <string name="no_data_label">No data</string>
    <string name="temperature_placeholder">27°</string>


    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Bluetooth</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_bluetooth">Bluetooth</string>

    <string name="ble_name_placeholder">Device name</string>
    <string name="ble_mac_placeholder">Device mac</string>
    <string name="connect">Connect</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>

</resources>