<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ble_labels"
        android:layout_width="293dp"
        android:layout_height="57dp"
        android:layout_marginStart="2pt"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ble_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_name_placeholder"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ble_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_mac_placeholder" />
    </LinearLayout>

    <Button
        android:id="@+id/connect_btn"
        android:layout_width="111dp"
        android:layout_height="58dp"
        android:layout_marginEnd="2pt"
        android:text="@string/connect" />
</LinearLayout>