<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eco2_gauge_container"
        android:layout_width="168dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028">

        <ImageView
            android:id="@+id/eco2_arrow_canvas"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="TODO"
            android:rotation="-150"
            android:tint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_arrow_fat_center" />

        <ImageView
            android:id="@+id/eco2_gauge_back"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_gauge_around" />

        <TextView
            android:id="@+id/gauge_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_label"
            app:layout_constraintBottom_toBottomOf="@+id/eco2_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/eco2_gauge_back"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/eco2_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/eco2_gauge_back"
            app:layout_constraintVertical_bias="0.914" />

        <TextView
            android:id="@+id/gauge_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eco_gauge_label"
            app:layout_constraintBottom_toBottomOf="@+id/eco2_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/eco2_gauge_back"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/eco2_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/eco2_gauge_back"
            app:layout_constraintVertical_bias="0.121" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/voc_gauge_container"
        android:layout_width="168dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028">

        <ImageView
            android:id="@+id/voc_arrow_canvas"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="TODO"
            android:rotation="-150"
            android:tint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_arrow_fat_center" />

        <ImageView
            android:id="@+id/voc_gauge_back"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_gauge_around" />

        <TextView
            android:id="@+id/voc_gauge_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_label"
            app:layout_constraintBottom_toBottomOf="@+id/voc_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/voc_gauge_back"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/voc_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/voc_gauge_back"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/voc_gauge_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voc_gauge_label"
            app:layout_constraintBottom_toBottomOf="@+id/voc_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/voc_gauge_back"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/voc_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/voc_gauge_back"
            app:layout_constraintVertical_bias="0.121" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hum_gauge_container"
        android:layout_width="168dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356">

        <ImageView
            android:id="@+id/hum_arrow_canvas"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="TODO"
            android:rotation="-150"
            android:tint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_arrow_fat_center" />

        <ImageView
            android:id="@+id/hum_gauge_back"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_gauge_around" />

        <TextView
            android:id="@+id/hum_gauge_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_label"
            app:layout_constraintBottom_toBottomOf="@+id/hum_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/hum_gauge_back"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/hum_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/hum_gauge_back"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/hum_gauge_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hum_gauge_label"
            app:layout_constraintBottom_toBottomOf="@+id/hum_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/hum_gauge_back"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/hum_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/hum_gauge_back"
            app:layout_constraintVertical_bias="0.121" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pressure_gauge_container"
        android:layout_width="168dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356">

        <ImageView
            android:id="@+id/pressure_arrow_canvas"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="TODO"
            android:rotation="-150"
            android:tint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_arrow_fat_center" />

        <ImageView
            android:id="@+id/pressure_gauge_back"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_gauge_around" />

        <TextView
            android:id="@+id/pressure_gauge_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_label"
            app:layout_constraintBottom_toBottomOf="@+id/pressure_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/pressure_gauge_back"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/pressure_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/pressure_gauge_back"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/pressure_gauge_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_gauge_label"
            app:layout_constraintBottom_toBottomOf="@+id/pressure_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/pressure_gauge_back"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/pressure_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/pressure_gauge_back"
            app:layout_constraintVertical_bias="0.121" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/temp_gauge_container"
        android:layout_width="168dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659">

        <ImageView
            android:id="@+id/temp_gauge_back"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_gauge_around" />

        <TextView
            android:id="@+id/temp_gauge_value"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:autoText="false"
            android:gravity="center|clip_vertical|center_horizontal"
            android:text="@string/temperature_placeholder"
            android:textAllCaps="false"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/temp_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/temp_gauge_back"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/temp_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/temp_gauge_back"
            app:layout_constraintVertical_bias="0.507" />

        <TextView
            android:id="@+id/temp_gauge_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_gauge_label"
            app:layout_constraintBottom_toBottomOf="@+id/temp_gauge_back"
            app:layout_constraintEnd_toEndOf="@+id/temp_gauge_back"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/temp_gauge_back"
            app:layout_constraintTop_toTopOf="@+id/temp_gauge_back"
            app:layout_constraintVertical_bias="0.121" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>